# low-latency-rag

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  app.py  demo.py  docker-compose.yml  main.py  pyproject.toml  rag_openai.py  rag_system.py  req.txt  requirements.deploy.txt  test_document.txt
.github/: copilot-instructions.md
